<resources>
    <string name="appName">Vinilos App</string>

    <!-- Strings used for fragments for navigation -->
    <string name="navButtonAlbums">Álbumes</string>
    <string name="navButtonMusicians">Artistas</string>
    <string name="navButtonCollectors">Coleccionistas</string>

    <string name="titleAlbums">Álbumes</string>
    <string name="titleMusicians">Artistas</string>
    <string name="titleCollectors">Coleccionistas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rating_comment_title">"Rating: "</string>
    <string name="rating_comment_input">"Deja un comentario: "</string>
    <string name="tracks_title_card_view">Lista de canciones</string>
    <string name="comments_title_card_view">Comentarios</string>
    <string name="no_album">No album</string>
    <string name="dash">-</string>
    <string name="no_collector">No collector</string>
    <string name="no_musician">No musician</string>
    <string name="image_complement_album">Portada del álbum</string>
    <string name="image_complement_artist">Foto de</string>
    <string name="create_album">Crear Álbum</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_cover">URL Portada</string>
    <string name="hint_date">Fecha (YYYY-MM-DD)</string>
    <string name="hint_genre">Género</string>
    <string name="hint_record_label">Disquera</string>
    <string name="hint_description">Descripción</string>
    <string name="button_save">Guardar</string>
    <string name="content_desc_create_album_button">Botón para crear un álbum</string>
    <string name="rating_value_5">5</string>
    <string name="rating_value_4">4</string>
    <string name="rating_value_3">3</string>
    <string name="rating_value_2">2</string>
    <string name="rating_value_1">1</string>
    <string name="rating_title">Rating:</string>
    <string name="new_comment_title">Comentar</string>
    <string name="comment_action_button">Comentar</string>
    <string name="clean_action_button">Limpiar</string>
    <string name="commenter_title">Usuario:</string>
</resources>