<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/appName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:typeface="normal" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
            android:typeface="normal"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/navButtonAlbums"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:onClick="navigateToView"
                android:text="@string/navButtonAlbums"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/navButtonMusicians"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:onClick="navigateToView"
                android:text="@string/navButtonMusicians"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
            app:navGraph="@navigation/nav_graph"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>